--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,29 @@
-<h1>Lists</h1>
+<%# Images folder: /app/assets/images %>
 
-<% @lists.each do |list| %>
-  <li><%= list.name %></li>
-<% end %>
+<div class="header">
+  <%= image_tag "popcorn.jpg", alt:"popcorns", class: "popcorn" %>
+  <div class="top-links">
+    <%= link_to "My lists", lists_path(@lists), class: "non-underlined" %>
+    <%= link_to "New list", new_list_path, class: "non-underlined" %>
+  </div>
+</div>
+
+<div class="banner">
+  <%#= image_tag "cinema.jpg", alt:"banner image", class: "cinema" %>
+  <h1>Save any kind of movies</h1>
+  <p>- Add your best movies -</p>
+</div>
+
+<div class="lists">
+  <div class="lists-header">
+    <h2>My Lists</h2>
+    <%= link_to "Create a movie list", new_list_path, class: "btn btn-success" %>
+  </div>
+  <div class="row">
+  <% @lists.each do |list| %>
+    <div class="movie-card col-4">
+      <%= link_to list.name, list_path(list), class: "non-underlined card-link" %>
+    </div>
+  <% end %>
+  </div>
+</div>
