--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,11 @@
-<h1>New List</h1>
+<div class="list-creation">
+  <h1>New List</h1>
 
-<!-- app/views/restaurants/_form.html.erb -->
-<%= simple_form_for(@list) do |f| %>
-  <%= f.input :name %>
-  <%= f.submit %>
-<% end %>
+  <!-- app/views/lists/_form.html.erb -->
+  <%= simple_form_for(@list) do |f| %>
+    <%= f.input :name, input_html: { class: "create-list" } %>
+    <%= f.submit "Create List", class:"btn btn-success" %>
+  <% end %>
+  <br>
+  <%= link_to "Go back to my lists", lists_path, class:"non-underlined" %>
+</div>
