--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -7,5 +7,5 @@
     <%= f.submit "Create List", class:"btn btn-success" %>
   <% end %>
   <br>
-  <%= link_to "Go back to my lists", lists_path, class:"non-underlined" %>
+  <%= link_to "Go back to my lists", root_path, class:"non-underlined" %>
 </div>
