photo upload added to form

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -27,3 +27,7 @@
   <% end %>
   </div>
 </div>
+
+<%# Import image testing %>
+<%#= cl_image_tag("ka8s9fvfxywtg8ovzoxd", width: 400, height: 300, crop: :fill) %>
+<%#= cl_image_tag("vdalbfnnzdtu0ttekamb", width: 150, height: 150, crop: :thumb, gravity: :face) %>
