--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -38,4 +38,7 @@
     </div>
   <% end %>
   </div>
+
+  <%# Image testing %>
+  <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
 </div>
