--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,6 +4,7 @@
   <!-- app/views/lists/_form.html.erb -->
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name, input_html: { class: "create-list" } %>
+    <%= f.input :photo, input_html: { class: "file-upload" }, as: :file %>
     <%= f.submit "Create List", class:"btn btn-success" %>
   <% end %>
   <br>
