--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -15,6 +15,22 @@
 }
 
 .banner-movies {
+  // background-image: asset-url("movie.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 400px;
+  // width: 200px;
+  color: white;
+  font-weight: bold;
+  font-size: 50px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-movies-list {
   background-image: asset-url("movie.jpg");
   background-size: cover;
   background-position: center;
